# OWUI-Office-MCP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  config.py  main.py  pyproject.toml
.github/workflows/: docker.yml
models/: _base.py  docx.py  owui.py  pptx.py  project.py  template.py  xlsx.py
services/: owui.py
subservers/: _chart.py  _sandbox.py  _store.py
subservers/docx/: _facade.py  _ops.py  _utils.py  server.py
subservers/powerpoint/: _files.py  _utils.py  server.py
subservers/pptx/: _facade.py  _ops.py  _utils.py  server.py
subservers/xlsx/: _facade.py  _ops.py  _utils.py  server.py
templates/: template.docx  template.xlsx
