[project]
name = "owui-office-mcp"
version = "0.1.0"
description = "Office document MCP server for OpenWebUI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=7.1.4",
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]
