[project]
name = "owui-office-mcp"
version = "0.4.0"
description = "Office document MCP server for OpenWebUI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=7.1.4",
    "fastmcp>=3.4.3",
    "httpx>=0.28.1",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pillow>=12.3.0",
    "pydantic-monty>=0.0.18",
    "pydantic-settings>=2.14.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
]
